# localisation_lang

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
lang/: __init__.py  lang.py
locallang/: __init__.py  lang.py
src/: __init__.py  lang.py
