[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lang_Maxland255"
version = "0.0.1"
authors = [
  { name="Maxlanf255", email="developer@pieteraerens.eu" },
]
description = "A small package to localise your python application"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"